# Local-IBDP-LLM-Agent

./: .gitignore  README.md  pyproject.toml
glm_agent/: CLAUDE.md  README.md  pyproject.toml
glm_agent/docs/superpowers/plans/: 2026-07-04-glm-agent.md
glm_agent/src/glm_agent/: cli.py
glm_agent/tests/: test_cli.py
ibdp_tutor/: .gitignore  CLAUDE.md  config.toml  pyproject.toml
ibdp_tutor/docs/plans/: cli-plan.md
ibdp_tutor/skills/ib-metadata-conventions/: ib-metadata-conventions.SKILL.md
ibdp_tutor/skills/markscheme-marking/: markscheme-marking.SKILL.md
ibdp_tutor/src/ib_tutor/: ask.py  cli.py  config.py  ingest.py  mark.py  quiz.py  retrieve.py  stats.py  store.py
ibdp_tutor/tests/: test_ask.py  test_cli.py  test_config.py  test_ingest.py  test_mark.py  test_quiz.py  test_retrieve.py  test_stats.py  test_store.py
ibstudy/: analytics.py  cli.py  db.py  ingest.py  review.py  srs.py  tui.py
tests/: test_analytics.py  test_ingest.py  test_review.py  test_srs.py
