[project]
name = "ibstudy"
version = "0.1.0"
description = "Local terminal-only IB study app: SM-2 flashcards, ingestion, analytics."
requires-python = ">=3.12"
dependencies = [
    "textual>=0.58",
    "rich>=13.7",
    "plotext>=5.2",
    "pypdf>=4.0",
]

[project.scripts]
ibstudy = "ibstudy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ibstudy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.coverage.run]
branch = true
