[project]
name = "glm-agent"
version = "0.1.0"
description = "Standalone local LLM chat agent via Ollama (fallback for ib-tutor)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "ollama>=0.3",
]

[project.scripts]
glm-agent = "glm_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glm_agent"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
