[project]
name = "ib-tutor"
version = "0.1.0"
description = "Local terminal-only RAG study assistant for IB Diploma materials."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "typer>=0.12",
    "rich>=13.7",
    "ollama>=0.3",
]

[project.scripts]
ib-tutor = "ib_tutor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ib_tutor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["fitz", "rank_bm25"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
